--- a/eval_hle/conf/config.yaml
+++ b/eval_hle/conf/config.yaml
@@ -4,7 +4,7 @@ provider: vllm # [vllm]
 
 base_url: http://localhost:8000/v1
 
-model: deepseek/deepseek-r1-0528:free
+model: qwen/qwen3-32b
 max_completion_tokens: 38000
 reasoning: true
 
