--- a/eval_hle/conf/config.yaml
+++ b/eval_hle/conf/config.yaml
@@ -4,7 +4,7 @@ provider: vllm # [vllm]
 
 base_url: http://localhost:8000/v1
 
-model: Qwen/Qwen3-32B
+model: llm-2025-sahara/Qwen3-32B-omr-peft
 max_completion_tokens: 38000
 reasoning: true
 
