--- a/eval_hle/conf/config.yaml
+++ b/eval_hle/conf/config.yaml
@@ -12,4 +12,4 @@ reasoning: true
 num_workers: 2500
 max_samples: 2500
 
-judge: o3-mini-2025-01-31
+judge: deepseek-ai/DeepSeek-R1-Distill-Llama-70B
