use llm-2025-sahara/hle-10fold instead of cais/hle
https://huggingface.co/datasets/llm-2025-sahara/hle-10fold

--- a/eval_hle/conf/config.yaml
+++ b/eval_hle/conf/config.yaml
@@ -1,4 +1,11 @@
-dataset: cais/hle
+# sub dataset
+# NOTE: required llm-2025-sahara organization's HF_TOKEN
+# it's not your personal HF_TOKEN
+# use full dataset if cannot access to it
+dataset: llm-2025-sahara/hle-10fold
+
+# full dataset
+# dataset: cais/hle
 
 provider: vllm # [vllm]
 
