--- a/eval_hle/conf/config.yaml
+++ b/eval_hle/conf/config.yaml
@@ -11,7 +11,7 @@ provider: vllm # [vllm]
 
 base_url: http://localhost:8000/v1
 
-model: llm-2025-sahara/Qwen3-32B-omr-peft
+model: Qwen/Qwen3-235B-A22B
 max_completion_tokens: 38000
 reasoning: true
 
