--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ eval_hle/leaderboard/**/*.json*
 eval_dna/evaluation_results/**/*.json*
 eval_dna/evaluation_results/**/*.csv
 train/example_data
+train/tests/output
 
 .env
 secrets.env
