--- a/eval_hle/conf/config.yaml
+++ b/eval_hle/conf/config.yaml
@@ -13,7 +13,7 @@ provider: vllm # [vllm]
 
 base_url: http://localhost:8000/v1
 
-model: llm-2025-sahara/Qwen3-4B-omr-genselect-peft
+model: Qwen/Qwen3-4B
 max_completion_tokens: 65536
 reasoning: true
 
