Add category filtering support for HLE evaluation
- Add category config parameter to config.yaml
- Update vllm_predictions.py to filter dataset by category
- Update run_judge_results.py to handle category in output paths and WandB project names
- Support both full dataset and category-specific evaluation

--- a/eval_hle/conf/config.yaml
+++ b/eval_hle/conf/config.yaml
@@ -6,6 +6,10 @@ dataset: llm-2025-sahara/hle-10fold
 # now hle-10fold have test split which is the same as validation
 split: test
 
+# Category filter: Biology/Medicine, Chemistry, Computer Science/AI, Engineering, 
+# Humanities/Social Science, Math, Other, Physics. If empty, use full dataset
+category:
+
 # full dataset
 # dataset: cais/hle
 
