--- a/eval_hle/conf/config.yaml
+++ b/eval_hle/conf/config.yaml
@@ -17,7 +17,7 @@ provider: vllm # [vllm]
 
 base_url: http://localhost:8000/v1
 
-model: Qwen3-235B-A22B-peft
+model: LLMcompe-Team-Watanabe/Qwen3-32B-textbookreasoning-UGPhysics-AoPsInstruct-sft-med-grpo
 max_completion_tokens: 65536
 reasoning: true
 
